--- a/documents/1.install.md
+++ b/documents/1.install.md
@@ -4,16 +4,16 @@
 
 ### **Note:** Requires [Go 1.12+](https://golang.org/dl/)
 
-- [golang installation procedure](https://github.com/commitHub/genesisTransactions/blob/master/crust-2/documents/1.setup.md#install-golang-required-112)
+- [golang installation procedure](https://github.com/persistenceOne/genesisTransactions/blob/master/crust-2/documents/1.setup.md#install-golang-required-112)
 
 
-1. Download commitBlockchain files from the official [CommitBlockchain](https://github.com/commitHub/commitBlockchain)
+1. Download Persistence SDK files from the official [Persistence Blockchain](https://github.com/persistenceOne/persistenceSDK)
 
-    `go get github.com/commitHub/commitBlockchain`
+    `go get github.com/persistenceOne/persistenceSDK
 
-2. Navigate to the `commitBlockchain` folder
+2. Navigate to the `Persistence SDK` folder
 
-    `cd $GOPATH/src/github.com/commitHub/commitBlockchain`
+    `cd $GOPATH/src/github.com/persistenceOne/persistenceSDK
 
     If you want to install specific version or commit you can run the below command. By default you get development branch.
     
@@ -22,7 +22,7 @@
     ![](https://i.imgur.com/kzu6Kbo.png)
 
     
-3. Run following command to install the commit-blockchain
+3. Run following command to install the Persistence SDK
 
     `make all`
 
