--- a/documents/2.new-node.md
+++ b/documents/2.new-node.md
@@ -5,7 +5,7 @@
 
 ### Initializing the default genesis and validator files
 
-Initialize the `commitBlockchain` validator and set the moniker. *Moniker* is a name that you set to your validator. It will generate genesis.json and config files.
+Initialize the `Persistence Blockchain` validator and set the moniker. *Moniker* is a name that you set to your validator. It will generate genesis.json and config files.
 
 `maind init <moniker of validator>`
 
@@ -63,4 +63,4 @@ Create an offline genesis transaction by running the following command. The `gen
 
     `maind start`
 
-- It will start the local chain, if you want to connect to our testnet [Crust-X](https://github.com/commitHub/genesisTransactions/tree/master/crust-2)
+- It will start the local chain, if you want to connect to our testnet [Crust-X](https://github.com/persistenceOne/genesisTransactions/tree/master/crust-2)
