explorer changes name changes

--- a/documents/2.new-node.md
+++ b/documents/2.new-node.md
@@ -9,9 +9,9 @@ Initialize the `Persistence Blockchain` validator and set the moniker. *Moniker*
 
 `maind init <moniker of validator>`
 
-For example, if `Commit Network` is the moniker to be set, the below command is to be used
+For example, if `Persistence Network` is the moniker to be set, the below command is to be used
 
-`maind init "Commit Network" --chain-id crust-2`
+`maind init "Persistence Network" --chain-id crust-2`
 
 ![](https://i.imgur.com/6tDy4pX.png)
 
