--- a/documents/1.install.md
+++ b/documents/1.install.md
@@ -9,11 +9,11 @@
 
 1. Download Persistence SDK files from the official [Persistence Blockchain](https://github.com/persistenceOne/persistenceSDK)
 
-    `go get github.com/persistenceOne/persistenceSDK
+    `git clone https://github.com/persistenceOne/persistenceSDK.git`
 
 2. Navigate to the `Persistence SDK` folder
 
-    `cd $GOPATH/src/github.com/persistenceOne/persistenceSDK
+    `cd persistenceSDK
 
     If you want to install specific version or commit you can run the below command. By default you get development branch.
     
