--- a/documents/1.install.md
+++ b/documents/1.install.md
@@ -2,7 +2,7 @@
 ## Installation 
 ---
 
-### **Note:** Requires [Go 1.12+](https://golang.org/dl/)
+### **Note:** Requires [Go 1.13+](https://golang.org/dl/)
 
 - [golang installation procedure](https://github.com/persistenceOne/genesisTransactions/blob/master/crust-2/documents/1.setup.md#install-golang-required-112)
 
@@ -13,7 +13,7 @@
 
 2. Navigate to the `Persistence SDK` folder
 
-    `cd persistenceSDK
+    `cd persistenceSDK`
 
     If you want to install specific version or commit you can run the below command. By default you get development branch.
     
