--- a/documents/2.new-node.md
+++ b/documents/2.new-node.md
@@ -64,3 +64,48 @@ Create an offline genesis transaction by running the following command. The `gen
     `maind start`
 
 - It will start the local chain, if you want to connect to our testnet [Crust-X](https://github.com/persistenceOne/genesisTransactions/tree/master/crust-2)
+
+
+## Join Testnet as a validator 
+
+### Initializing the node
+
+Initialize the `Persistence Blockchain` node and set the moniker. *Moniker* is a name that you set to your validator. It will generate genesis.json and config files.
+
+`maind init <moniker of validator>`
+
+Replace the `genesis.json` file in `$HOME/.maind/config/` with testnet's [`genesis`](https://github.com/persistenceOne/genesisTransactions/blob/master/crust-2/final_genesis.json) file
+
+### Starting the chain
+
+Add [persistent peers](https://github.com/persistenceOne/genesisTransactions/blob/master/crust-2/final_peers.json) in `$HOME/.maind/config/config.toml`
+
+Start the chain
+
+`maind start`
+
+### Create an Account
+
+`maincli keys add <account name>`
+
+**IMPORTTANT: Please write the mnemonic phrase in a safe place**
+
+![](https://i.imgur.com/EyRJERQ.png)
+
+Get Coins on your account
+
+### Create validator
+
+Stake your coins and become validator:
+    `maincli tx staking create-validator --from <account name> --min-self-delegation 1 --commission-max-change-rate 0.1 --commission-max-rate 0.1 --commission-rate 0.1 --moniker <validator_moniker_name> --website <website_url> --amount <coins_to_stake> --pubkey <validator_consensus_pubkey> --chain-id crust-2`
+    
+ **Note**: `<coins_to_stake>` in format `1000000ucommit`
+    
+ **Note:** `validator_consensus_pubkey` can be found by command: `maind tendermint show-validator`
+ 
+ **Note:** For any other details or help type: `maincli tx staking create-validator -h`
+ 
+ **IMPORTTANT: Please save the `$HOME/.maind/config/priv_validator_key.json` file.**
+ 
+ 
+        
