--- a/documents/2.new-node.md
+++ b/documents/2.new-node.md
@@ -18,6 +18,8 @@ Start the chain
 
 `maind start`
 
+**NOTE:** Please wait for your node to be synced up to current height.
+
 ### Create an Account
 
 `maincli keys add <account name>`
