--- a/documents/2.new-node.md
+++ b/documents/2.new-node.md
@@ -24,7 +24,7 @@ Start the chain
 
 `maincli keys add <account name>`
 
-**IMPORTTANT:** Please write the mnemonic phrase in a safe place
+**IMPORTANT:** Please write the mnemonic phrase in a safe place
 
 ![](https://i.imgur.com/EyRJERQ.png)
 
@@ -42,10 +42,7 @@ Stake your coins and become validator:
  
  **Note:** For any other details or help type: `maincli tx staking create-validator -h`
  
- **IMPORTTANT:** Please save the `$HOME/.maind/config/priv_validator_key.json` file.
- 
- 
- 
+ **IMPORTANT:** Please save the `$HOME/.maind/config/priv_validator_key.json` file.
  
  
 ## Setup New Node
