--- a/documents/2.new-node.md
+++ b/documents/2.new-node.md
@@ -29,22 +29,22 @@ Run the following command to create a new persistence account in local database.
 
 Run the following command to add an account as genesis account.
 
-**Note:** Add only amount `100000000ucommit`.
+**Note:** Add only amount `100000000uxprs`.
 
 `maind add-genesis-account <account name> <amount to be add>`
 
-![](https://i.imgur.com/NR53QaL.png)
+![](https://i.imgur.com/uj4R5Vz.png)
 
 
 ### Create an offine genesis transaction
 
-**Note:** Add only amount `100000000ucommit`
+**Note:** Add only amount `100000000uxprs`
 
 Create an offline genesis transaction by running the following command. The `gentx-xxx.json` file is generated in the directory `$HOME/.maind/config/gentx/`.
 
 `maind gentx --name <account name> \`
 
-`--amount <amount to be stake in ucommit> \`
+`--amount <amount to be stake in uxprs> \`
 
 `--commission-rate 0.1 \`
 
@@ -52,7 +52,7 @@ Create an offline genesis transaction by running the following command. The `gen
 
 `--commission-max-change-rate 0.01`
 
-![](https://i.imgur.com/PulnFgW.png)
+![](https://i.imgur.com/QXAIR7u.png)
 
 ### Collect genesis transactions
 
